--- a/Index.html
+++ b/Index.html
@@ -12,5 +12,7 @@
     <h1>Mude a cor pelo tamanho da tela</h1>
     <!-- Min Width -->
     <p>Media query funcionando ao contrário</p>
+    <!-- landscape -->
+    <h3>Vísivel em landspace</h3>
   </body>
 </html>
